src/test/deca/context/invalid/classe_double_declaration.deca
// Description :
// Deux classes meme nom 

// Resultats :
// Echec

class Club {
    int budget;
}

class Club {
    int joueurs;
}

{ }
